# 113x

./: .gitattributes  .gitignore  README.txt  wifi_dt.c  wifi_dt.h
Patch/: README.txt
buildroot/buildroot/boot/uboot/: Config.in  uboot.mk
buildroot/buildroot/configs/: a1_ad401_a32_lowpower_release_defconfig  a1_ad403_a32_k515_release_defconfig  a1_ad403_a32_release_defconfig  a1_ad403_a32_soundbar_k515_release_defconfig  a1_ad403_a32_speaker_k515_release_defconfig  a1_t404_a32_lowpower_release_defconfig  a1_t404_a32_release_defconfig  a213y_au401_a32_fastboot_release_defconfig  a213y_au401_a32_release_defconfig  a213y_au40a1_a32_ass_release_defconfig  a213y_au40a2_a32_release_defconfig  a4_ba400_a6432_release_defconfig  a4_ba400_spk_a6432_release_defconfig  a4_ba409_a6432_release_defconfig  a5_av400_a6432_release_defconfig  a5_av400_a64_release_defconfig  a5_av400_spk_a6432_release_defconfig  a5_av409_a6432_release_defconfig  axg_s400-emmc_a6432_k54_release_defconfig  axg_s400-emmc_a6432_release_defconfig  axg_s400_a6432_k54_release_defconfig  axg_s400_sbr_a6432_k54_release_defconfig  axg_s420_a6432_k54_release_defconfig  c1_ae400-base_a64_release_defconfig  c1_ae400-nand_a6432_release_defconfig  c1_ae400-nand_a64_release_defconfig  c1_ae400_a64_k515_release_defconfig  c1_ae400_uvc_a64_release_defconfig  c1_ae402-nand_a64_release_defconfig  c1_ae402_a64_release_defconfig  c2_af400-base_a64_release_defconfig  c2_af400-fastboot_a64_release_defconfig  c2_af400-nand_a64_release_defconfig  c2_af400_a32_k515_release_defconfig  c2_af400_a6432_release_defconfig  c2_af400_a64_k510_release_defconfig  c2_af400_a64_k515_release_defconfig  c2_af400_a64_release_defconfig  c2_af400_uvc_a64_release_defconfig  c2_af401_a64_release_defconfig  (+58 more)
buildroot/buildroot/configs/amlogic/: a113_base.config  a113_base_k54.config  a113_purely_soundbar.config  a113_s400.config  a113_s400_PurelySBR.config  a113_s400_SBR.config  a113_s400_SBR_k54.config  a113_s400_k54.config  a113_s410_PurelySBR.config  a113_s420.config  a113_s420_k54.config  a113_soundbar.config  a113_soundbar_k54.config  a113_speaker.config  a113_speaker_k54.config  a1_ad401.config  a1_ad401_lowpower.config  a1_ad402.config  a1_ad403.config  a1_ad403_k515.config  a1_ad403_sbr_k515.config  a1_ad403_spk_k515.config  a1_base.config  a1_base_k515.config  a1_soundbar_k515.config  a1_speaker.config  a1_speaker_k515.config  a1_t404.config  a1_t404_lowpower.config  a213y_au401.config  a4_ba400.config  a4_ba400_spk.config  a4_ba409.config  a4_base.config  a4_soundbar.config  a4_speaker.config  a5_av400.config  a5_av400_spk.config  a5_av409.config  (+177 more)
buildroot/buildroot/fs/: common.mk
buildroot/buildroot/linux/: linux.mk
buildroot/buildroot/package/: Config.in  Config.in.host
buildroot/buildroot/toolchain/: Config.in  toolchain-wrapper.c
buildroot/multimedia/: .~lock.onnxruntime.tar#  Config.in
buildroot/multimedia/SoftHSMv2/: CMakeLists.txt
buildroot/multimedia/dolby_ms12_release/: dolby_ms12_release.mk
buildroot/multimedia/dts_release/: Makefile  readme.txt
buildroot/multimedia/libadpcm/: CMakeLists.txt  adec-armdec-mgt.h  adpcm_decode.c
buildroot/multimedia/libfaad/: CMakeLists.txt  Makefile  bits.c  bits.h  cfft.c  common.h  decoder.c  libaacdec.c  pns.c  ps_dec.c  ps_syntax.c  sbr_dec.c  sbr_fbt.c  sbr_hfadj.c  sbr_syntax.c  specrec.c  syntax.c
buildroot/multimedia/libfaad/codebook/: hcb.h
buildroot/multimedia/libflac/: CMakeLists.txt  codec_message.h  common.h  flac_decode.c  golomb.c  internal.h
buildroot/multimedia/libmad/: CMakeLists.txt  adec-armdec-mgt.h  decoder.c  decoder.h  global.h  layer3.c
buildroot/multimedia/libplayer/: Makefile
buildroot/multimedia/secfirmload/: secfirmload.mk
buildroot/multimedia/v4l2-uvm-test/: v4l2-uvm-test.mk
(+1157 files in other folders)
